# render_engine

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  box.hpp  camera.cpp  camera.hpp  checkerBoard.cpp  checkerBoard.hpp  coloredLightRay.hpp  compositeShape.cpp  compositeShape.hpp  crossHatchModifier.cpp  crossHatchModifier.hpp  image.cpp  intersections.cpp  intersections.hpp  kdtree.cpp  lightRay.cpp  lightRay.hpp  lightSource.hpp  material.cpp  material.hpp  matrix.cpp  matrix.hpp  mengerSponge.hpp  mesh.hpp  meshTriangle.hpp  participatingMedia.cpp  participatingMedia.hpp  photon.cpp  photon.hpp  pinhole.cpp  pinhole.hpp  plane.cpp  point.cpp  pointLight.cpp  pointLight.hpp  poseTransformationMatrix.cpp  poseTransformationMatrix.hpp  rectangle.cpp  rectangle.hpp  scene.cpp  (+12 more)
src/containers/: CMakeLists.txt  coloredLightRay.cpp  image.hpp  kdtree.hpp  lightRay.cpp  point.hpp  vect.cpp
src/geometry/: CMakeLists.txt  box.cpp  mengerSponge.cpp  mesh.cpp  mesh.hpp  meshTriangle.cpp  plane.cpp  plane.hpp  rectangle.cpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/lighting/: CMakeLists.txt  pointLight.hpp  simpleAreaLight.cpp
src/material/: CMakeLists.txt  crossHatchModifier.cpp  material.cpp
src/scene/: CMakeLists.txt  scene.cpp  scene.hpp  sceneSamples.hpp
src/sensors/: CMakeLists.txt  camera.cpp
src/utils/: CMakeLists.txt
